--- a/index.html
+++ b/index.html
@@ -53,7 +53,76 @@
     </nav>
     <!--              CONTENT               -->
     <main role="main" class="">
+        <div class="row mr-0">
+            <div class="col-md-9">
+                <div class="row">
+                    <div class="col-md-2">
+                        <h5>Episode 1</h5>
+                    </div>
+                    <div class="col-md-2">
+                        <h5>09/10/12</h5>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>35 Commentaire(s)</h5>
+                    </div>
+                </div>
 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                    est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
+                    modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
+                    veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
+                    commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
+                    molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+            </div>
+            <div class="col-md-3">
+                <div class="row mt-2">
+                    <a href="#" class="btn btn-primary btn-block">Lire la suite</a>
+                </div>
+                <div class="row mt-2">
+                    <a href="#" class="btn btn-secondary btn-block">Laisser un commentaire</a>
+                </div>
+                <div class="row mt-2">
+                    <p>
+                        Some default text to fill some space, and something more so there is more text
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-3">
+                <img class="card-img-top" src="http://mag-projects.fr/projet3/sources/logo_small.png" alt="Card image cap">
+            </div>
+            <div class="col-md-6">
+                <h5 class="card-title">Episode 2</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="col-md-3">
+                <h5>Sommaire des épisodes</h5>
+
+                <ul class="list-group summary">
+                    <li class="list-group-item">Some default text to fill some space, and something more so there is more text
+                    </li>
+                    <li class="list-group-item">Some default text to fill some space, and something more so there is more text
+                    </li>
+                    <li class="list-group-item">Some default text to fill some space, and something more so there is more text
+                    </li>
+                    <li class="list-group-item">Some default text to fill some space, and something more so there is more text
+                    </li>
+                    <li class="list-group-item">Some default text to fill some space, and something more so there is more text
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
 
 
